<resources>
    <string name="app_name">SurveyAppGS</string>
    <string name="enter_customer_details_text">Enter Customer Details</string>
    <string name="phone_number">Phone Number</string>
    <string name="customer_name">Name</string>
    <string name="next_button">Next</string>
    <string name="clicked">Clicked</string>
    <string name="create_survey">Create Survey</string>
    <string name="complete_survey">Complete Survey</string>
    <string name="welcome_text">Welcome</string>
</resources>