<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:background="@android:color/holo_blue_light"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        android:padding="24dp"
        android:text="@string/enter_customer_details_text" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/name_edTx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_name"
                android:padding="10dp"
                android:inputType="text"
                android:autofillHints="name" />

            <EditText
                android:id="@+id/phone_edTx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:padding="10dp"
                android:autofillHints="Phone"
                android:inputType="phone" />

            <Button
                android:id="@+id/next_button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/next_button" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>